# zen

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  zen.sln  zen.vcxproj  zen.vcxproj.filters
include/zen/coff/: file_header.hpp  reloc.hpp  section_header.hpp  string.hpp  symbol.hpp  version.hpp
include/zen/core/: bit.hpp  definitions.h  fnv.hpp  requirements.hpp  xors.hpp
include/zen/nt/: data_directories.hpp  data_directory.hpp  dos_header.hpp  image.hpp  iterator.hpp  nt_headers.hpp  optional_header.hpp
include/zen/nt/directories/: delay_load.hpp  exports.hpp  iat.hpp  imports.hpp  relocs.hpp  tls.hpp
include/zen/platform/: constants.hpp  heavensgate.hpp  syscall.hpp  windows.hpp
include/zen/platform/common/: com_ptr.hpp  handle_guard.hpp  input.hpp  memory_guard.hpp  memory_section.hpp  protection_guard.hpp  status_code.hpp
include/zen/platform/rtl/: client_id.hpp  context.hpp  io_counters.hpp  io_status_block.hpp  large_integer.hpp  ldr_data_table_entry.hpp  list_entry.hpp  memory_basic_information.hpp  object_attributes.hpp  object_basic_information.hpp  peb.hpp  peb_ldr_data.hpp  process_basic_information.hpp  section_basic_information.hpp  string.hpp  system_process_information.hpp  system_thread_information.hpp  thread_basic_information.hpp  user_process_parameters.hpp  vm_counters.hpp
src/platform/: heavensgate.cpp  memory_section.cpp  syscall.cpp  windows.cpp
